--- a/characters.html
+++ b/characters.html
@@ -10,9 +10,9 @@
 <p><span aria-hidden="true">Plus one point one </span>&plus;1.1</p>
 <p><span aria-hidden="true">Plus one point one percent </span>&plus;1.1%</p>
 <h3>Minus Sign keyboard character</h3>
-<p><span aria-hidden="true">Minus one </span>+1</p>
-<p><span aria-hidden="true">Minus one point one </span>+1.1</p>
-<p><span aria-hidden="true">Minus one point on percent </span>+1.1%</p>
+<p><span aria-hidden="true">Minus one </span>-1</p>
+<p><span aria-hidden="true">Minus one point one </span>-1.1</p>
+<p><span aria-hidden="true">Minus one point on percent </span>-1.1%</p>
 <h3>Plus Sign HTML entity</h3>
 <p><span aria-hidden="true">Minus one </span>&minus;1</p>
 <p><span aria-hidden="true">Minus one </span>&minus;1.1</p>
