updating for voiceover

--- a/characters.html
+++ b/characters.html
@@ -15,10 +15,10 @@
 <p><span aria-hidden="true">Minus one point on percent </span>-1.1%</p>
 <h3>Minus Sign HTML entity</h3>
 <p><span aria-hidden="true">Minus one </span>&minus;1</p>
-<p><span aria-hidden="true">Minus one </span>&minus;1.1</p>
-<p><span aria-hidden="true">Minus one </span>&minus;1.1%</p>
+<p><span aria-hidden="true">Minus one point one </span>&minus;1.1</p>
+<p><span aria-hidden="true">Minus one point one percent </span>&minus;1.1%</p>
 <h3>Period HTML entity</h3>
 <p><span aria-hidden="true">Minus one </span>&minus;1</p>
-<p><span aria-hidden="true">Minus one </span>&minus;1&period;1</p>
-<p><span aria-hidden="true">Minus one </span>&minus;1&period;1%</p>
+<p><span aria-hidden="true">Minus one point one  </span>&minus;1&period;1</p>
+<p><span aria-hidden="true">Minus one point one percent </span>&minus;1&period;1%</p>
 </body>
